--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
               "./node_modules/intl-tel-input/build/css/intlTelInput.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/popper.js/dist/umd/popper.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"]
           },
           "configurations": {
             "production": {
